delayed default value can now be controlled through a global

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -84,6 +84,8 @@ list(APPEND TEST_FILES
         test_crc64.F90
         wrapper_modify_gpu.F90
         test_gang.F90
+        delayed_by_default.F90
+        not_delayed_by_default.F90
 	)
 
 #Place-holder for failing tests
