--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -134,6 +134,7 @@ set(ABOR1_TEST_FILES
 
 if(HAVE_IO)
   list(APPEND HDF5_TEST_FILES
+       test_hdf5par_wr_field2d.F90
        test_hdf5_wr_parallel_field2d.F90
        test_hdf5_rw_parallel_general.F90)
 endif()
