--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -86,6 +86,7 @@ list(APPEND TEST_FILES
         test_gang.F90
         delayed_by_default.F90
         not_delayed_by_default.F90
+        gpu_to_cpu.F90
 	)
 
 #Place-holder for failing tests
