Let the default value of delayed be user-configurable
Before this modification, the delayed option let the user allocate the
data on CPU and GPU after the call of field_new, but the two were still
happening at the same time.
With this modification, the allocation on CPU and the allocation on GPU
are separated. To do so, the satus system had to be slighty modified
since the whole library used to assume that the two data pointers were
allocated at the same time. Finally the usege of the status system has
been simplified with the addition of three helper functions (add, remove,
is) that let us modify or query the status without having to do bits
comparisons in the middle of the code.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -33,6 +33,7 @@ list(APPEND TEST_FILES
         cpu_to_gpu.F90
         cpu_to_gpu_delayed_init_value.F90
         cpu_to_gpu_init_value.F90
+        delayed_by_default.F90
         delete_device_wrapper.F90
         final_owner.F90
         final_wrapper.F90
@@ -45,13 +46,19 @@ list(APPEND TEST_FILES
         get_view_get_device_data.F90
         get_view_when_nhstfresh.F90
         get_view_when_uninitialized.F90
+        gpu_to_cpu.F90
+        gpu_to_cpu_delayed_init_value.F90
+        gpu_to_cpu_init_value.F90
         init_owner.F90
         init_owner2.F90
         init_owner_0_size.F90
         init_owner_delayed.F90
         init_owner_delayed_gpu.F90
+        init_owner_delayed_gpu2.F90
+        init_owner_delayed_gpu3.F90
         init_owner_delayed_init_debug_value.F90
         init_owner_delayed_init_value.F90
+        init_owner_delayed_init_value2.F90
         init_owner_gpu.F90
         init_owner_init_debug_value.F90
         init_owner_init_debug_value_gpu.F90
@@ -66,6 +73,7 @@ list(APPEND TEST_FILES
         init_wrapper_non_contiguous_multi.F90
         no_transfer_get_device.F90
         no_transfer_get_host.F90
+        not_delayed_by_default.F90
         pointer_to_owner_wrapper.F90
         reshuffle.F90
         reshuffle_lastdim.F90
