Add a compile option to switch behaviour of get_view
It helps to keep the test-case functional whatever the option is.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,12 @@ ecbuild_add_option( FEATURE FIELD_GANG
     DEFAULT ON
 )
 
+##Get_view abort
+ecbuild_add_option( FEATURE GET_VIEW_ABORT
+	DESCRIPTION "Enable this option to make get_view abort when data are not on CPU"
+	DEFAULT ON
+)
+
 
 ## fypp preprocessor flags
 if(HAVE_BUDDY_MALLOC)
