Configure CI to run the tests GET_VIEW_ABORT with ON or OFF

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
           - linux intel-classic
           - linux intel-modern
           - macos
+        get_view_abort: [ON,OFF]
 
         include:
 
@@ -225,5 +226,5 @@ jobs:
         dependency_branch: develop
         dependency_cmake_options: |
           ecmwf-ifs/fiat: "-DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DENABLE_TESTS=OFF
-        cmake_options: "-DCMAKE_BUILD_TYPE=${{ matrix.build_type }} ${{ matrix.cmake_options }} -DENABLE_ACC=OFF -DENABLE_IO=ON"
+        cmake_options: "-DCMAKE_BUILD_TYPE=${{ matrix.build_type }} ${{ matrix.cmake_options }} -DENABLE_ACC=OFF -DENABLE_IO=ON -DENABLE_GET_VIEW_ABORT=${{ matrix.get_view_abort }}"
         ctest_options: "${{ matrix.ctest_options }}"
