FIELD_STACK: add test for baseline case

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -141,6 +141,7 @@ if(HAVE_FIELD_GANG)
         test_field_stack_cpu.F90
         test_field_stack_gpu.F90
         test_field_stack_member_ranks.F90
+        test_field_stack_simple.F90
       )
 endif()
 
