Remove dependence of HDF5 IO on MPL, replace with MPI, minimize overall dependence on FIAT

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,6 @@ if( HAVE_FIELD_GANG )
 endif()
 add_subdirectory( util )
 add_subdirectory( shuffle )
-if( HAVE_IO )
+if ( HAVE_IO_SERIAL OR HAVE_IO_PARALLEL )
   add_subdirectory( io )
 endif()
