--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -33,14 +33,11 @@ field_api_add_object_library(
     SRCS           ${srcs}
     LIBRARIES      field_api_core field_api_debug
 )
+
 if(HAVE_IO_SERIAL)
 target_compile_definitions( field_api_io PRIVATE HAVE_IO_SERIAL )
-elseif(HAVE_IO_MPI)
-ecbuild_enable_mpi( COMPONENTS FORTRAN REQUIRED)
-target_compile_definitions( field_api_io PRIVATE HAVE_IO_MPI )
-
-elseif(HAVE_IO_MPL)
-target_compile_definitions( field_api_io PRIVATE HAVE_IO_MPL )
+elseif(HAVE_IO_PARALLEL)
+target_compile_definitions( field_api_io PRIVATE HAVE_IO_PARALLEL )
 endif()
 
 ## don't build precision dependent sourcefile
