Remove dependence of HDF5 IO on MPL, replace with MPI, minimize overall dependence on FIAT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,8 +45,8 @@ ecbuild_add_option( FEATURE SINGLE_PRECISION
 ecbuild_add_option( FEATURE DOUBLE_PRECISION
 	DESCRIPTION "Compile field_api in double precision" DEFAULT ON)
 
-set(DEFAULT_PRECISION sp)
 if(HAVE_SINGLE_PRECISION)
+    set(DEFAULT_PRECISION sp)
     list(APPEND fiat_components single)
     list(APPEND precisions sp)
 endif()
@@ -56,33 +56,29 @@ if(HAVE_DOUBLE_PRECISION)
     list(APPEND fiat_components double)
 endif()
 
+ecbuild_add_option( FEATURE MPI
+                    DEFAULT OFF
+                    DESCRIPTION "Support for MPI distributed parallelism"
+                    REQUIRED_PACKAGES "MPI COMPONENTS Fortran" )
+
 ## IO using HDF5
-ecbuild_add_option( FEATURE IO
-    DESCRIPTION "Use external libs, e.g. HDF5 to read and write FieldAPI variables"
-    REQUIRED_PACKAGES "HDF5 COMPONENTS Fortran"
-    DEFAULT OFF
-)
 ecbuild_add_option( FEATURE IO_SERIAL
     DESCRIPTION "Use serial HDF5 to read and write FieldAPI variables"
     REQUIRED_PACKAGES "HDF5 COMPONENTS Fortran"
     DEFAULT OFF
 )
-ecbuild_add_option( FEATURE IO_MPI
+
+ecbuild_add_option( FEATURE IO_PARALLEL
     DESCRIPTION "Use HDF5 (rank defined by MPI) to read and write FieldAPI variables"
     REQUIRED_PACKAGES "HDF5 COMPONENTS Fortran"
-    REQUIRED_PACKAGES "MPI COMPONENTS Fortran"
+    CONDITION HAVE_MPI 
     DEFAULT OFF
 )
 
-ecbuild_add_option( FEATURE IO_MPL
-    DESCRIPTION "Use HDF5 (rank defined by MPL) to read and write FieldAPI variables"
-    REQUIRED_PACKAGES "HDF5 COMPONENTS Fortran"
-    REQUIRED_PACKAGES "FIAT"
-    DEFAULT OFF
-)
-
-if( HAVE_IO_MPL )
-    list(APPEND fiat_components MPI)
+if(HAVE_IO_SERIAL OR HAVE_IO_PARALLEL)
+    option( HAVE_IO "HAVE_IO" TRUE)
+else()
+    option( HAVE_IO "HAVE_IO" FALSE)
 endif()
 
 ## find FIAT or at least its components 
@@ -139,6 +135,11 @@ list(APPEND prec_srcs
     ${CMAKE_CURRENT_BINARY_DIR}/src/io/field_hdf5_module.F90)
 endif()
 
+if( HAVE_MPI )
+list(APPEND prec_srcs
+    ${CMAKE_CURRENT_BINARY_DIR}/src/io/field_hdf5_module.F90)
+endif()
+
 list(APPEND obj_libs
         field_api_core
         field_api_debug
@@ -166,9 +167,8 @@ foreach(prec ${precisions})
          $<${fiat_FOUND}:fiat>
          $<${fiat_FOUND}:parkind_${prec}>
          OpenMP::OpenMP_Fortran
-         $<${HAVE_IO}:HDF5::HDF5>
-         $<${HAVE_IO_MPI}:MPI::MPI_Fortran>
-         $<${HAVE_IO_MPL}:fiat> 
+         $<$<BOOL:${HAVE_IO}>:HDF5::HDF5>
+	 $<${HAVE_IO_PARALLEL}:MPI::MPI_Fortran>
       )
 
   set_property(TARGET ${LIBNAME}_${prec} PROPERTY C_STANDARD 99)
@@ -208,7 +208,6 @@ ecbuild_add_option(
     FEATURE TESTS
     DEFAULT ON
     DESCRIPTION "Enable field_api testing"
-    CONDITION fiat_FOUND
 )
 
 if( HAVE_TESTS )
