--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,6 @@ if( HAVE_FIELD_GANG )
 endif()
 add_subdirectory( util )
 add_subdirectory( shuffle )
-if ( HAVE_IO_SERIAL OR HAVE_IO_PARALLEL )
+if( HAVE_IO )
   add_subdirectory( io )
 endif()
