Use CMake to compile HDF5 for better performance except if explicitly requested (needed to satisfy Intel Classic test that relies on configure)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -188,7 +188,7 @@ jobs:
           intel-oneapi-mkl-2023.2.0
         source /opt/intel/oneapi/setvars.sh
         printenv >> $GITHUB_ENV
-        FC=ifort .github/tools/install-hdf5.sh
+        FC=ifort .github/tools/install-hdf5.sh --use-configure ON --version 1.14.3
         echo "HDF5_ROOT=${GITHUB_WORKSPACE}/hdf5-install"    >> $GITHUB_ENV
         echo "CACHE_SUFFIX=$CC-$($CC -dumpversion)" >> $GITHUB_ENV
 
