--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,7 @@ jobs:
         name:
           - linux gnu-14
           - linux nvhpc-24.5
+          - linux nvhpc-25.9
           - linux intel-classic
           - linux intel-modern
           - macos
@@ -54,6 +55,17 @@ jobs:
           - name: linux nvhpc-24.5
             os: ubuntu-24.04
             compiler: nvhpc-24.5
+            compiler_version: '24.5'
+            compiler_cc: nvc
+            compiler_cxx: nvc++
+            compiler_fc: nvfortran
+            python-version: '3.11'
+            caching: true
+
+          - name: linux nvhpc-25.9
+            os: ubuntu-24.04
+            compiler: nvhpc-25.9
+            compiler_version: '25.9'
             compiler_cc: nvc
             compiler_cxx: nvc++
             compiler_fc: nvfortran
@@ -162,12 +174,18 @@ jobs:
       if: contains( matrix.compiler, 'nvhpc' )
       shell: bash -eux {0}
       run: |
-        ${FIELD_API_TOOLS}/install-nvhpc.sh --prefix /opt/nvhpc --version 24.5
+        ${FIELD_API_TOOLS}/install-nvhpc.sh --prefix /opt/nvhpc --version ${{matrix.compiler_version}}
         source /opt/nvhpc/env.sh
         FC=pgf90 .github/tools/install-hdf5.sh
         echo "HDF5_ROOT=${GITHUB_WORKSPACE}/hdf5-install"    >> $GITHUB_ENV
         echo "${NVHPC_DIR}/compilers/bin"                    >> $GITHUB_PATH
-        echo "${NVHPC_DIR}/comm_libs/openmpi4/bin"           >> $GITHUB_PATH
+        if [ "${{matrix.compiler_version}}" = "24.5" ]; then
+          echo "${NVHPC_DIR}/comm_libs/openmpi4/bin" >> $GITHUB_PATH
+        elif [ "${{matrix.compiler_version}}" = "25.9" ]; then
+          echo "${NVHPC_DIR}/comm_libs/hpcx/bin" >> $GITHUB_PATH
+        else 
+          echo "Wrong NVHPC compiler version. Please edit script"
+        fi
 
     - name: Download Intel compiler
       if: contains( matrix.compiler, 'intel' )
